# bluetooth-firmware-pro2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  style.c.include  toolchain.cmake
app/: CMakeLists.txt  ble_app_gcc_nrf52.ld  firmware_config.h  main.c  ok_platform.h  sdk_config.h
app/ble/: ok_ble.h  ok_ble_adv.c  ok_ble_adv_manage.c  ok_ble_init.c  ok_ble_internal.h  ok_ble_peer_manage.c  ok_ble_service_bat.c  ok_ble_service_dev_info.c  ok_ble_service_fido.c  ok_ble_service_nus.c
app/communication/: data_transmission.c  data_transmission.h  ok_cmd_protocol.c  ok_cmd_protocol.h  ok_communication.h  ok_serial_communication.c
app/hw/: flashled_manage.c  flashled_manage.h  ok_device_config.c  ok_device_config.h  ok_pwr_manage.h  ok_pwr_manage_ctrl.c  ok_storage.c  ok_storage.h  ok_watch_dog.c  ok_watch_dog.h  power_manage.c  power_manage.h
app/xdebug/: rtt_misc_debug.c  xdebug_flash_nvs_test.c  xdebug_flash_test.c
ble-firmware/components/ble/ble_services/ble_fido/: ble_fido.c
ble-firmware/components/ble/nrf_ble_gatt/: nrf_ble_gatt.c
ble-firmware/components/ble/peer_manager/: peer_manager.c  peer_manager.h  peer_manager_handler.c  peer_manager_types.h
components/heap/: sys_heap.c  sys_heap.h
components/nvs/: nvs.c  nvs.h  nvs_def.h  nvs_priv.h
dfu/: CMakeLists.txt  secure_bootloader_gcc_nrf52.ld
fmnadk/: CMakeLists.txt  build-lib.sh  fmna_app.c  fmna_config.h  fmna_storage.c  fmna_storage.h
fmnadk/lib/: fmna_app.h
